# gemm-from-scratch

./: .gitignore  CMakeLists.txt  README.md
scripts/: benchmark.sh  profile.sh
src/: main.cu  runner.cuh  utils.cuh
src/kernels/: 00_cublas.cuh  01_naive.cuh  02_coalesced.cuh  03_shared_mem.cuh  04_blocktiling_1d.cuh  05_blocktiling_2d.cuh
